--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,12 +1,15 @@
-<div class="container">
-  <h2>Create an event here:</h2>
-
-  <%= simple_form_for @event do |f| %>
-    <%= f.input :title %>
-    <%= f.input :start_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
-    <%= f.input :end_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
-    <%= f.input :location %>
-    <%= f.input :description %>
-    <%= f.button :submit %>
-  <% end %>
+<div class="container w-50">
+  <div class="mt-5">
+    <h2>Create an event here:</h2>
+  </div>
+  <div>
+    <%= simple_form_for @event do |f| %>
+      <%= f.input :title %>
+      <%= f.input :start_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
+      <%= f.input :end_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
+      <%= f.input :location %>
+      <%= f.input :description %>
+      <%= f.button :submit, class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
