--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,38 +1,29 @@
+<div class='fs-2 text-center mt-5 pb-10'>
+  <div class='fw-bold'><%= @event.title %></div>
+  <img class="mt-3 mb-4 rounded-4 w-50" src="https://images.unsplash.com/photo-1545622783-b3e021430fee?q=80&w=868&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="event image">
+  <div>
+    <p class='fs-5 lh-1'>From <%= @event.start_at.strftime('%m/%d/%Y')%> to <%= @event.end_at.strftime('%m/%d/%Y') %></p>
+    <p class='fs-5 lh-1'><%= @event.location %></p>
+    <p class='fs-6'><%= @event.description %></p>
+    <%= link_to 'Book Now', new_booking_path, class: 'btn btn-primary' %>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Book Now</button>
+  </div>
+</div>
 
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <i class="fa-solid fa-hand-sparkles"></i> BeWithUs
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Me</a>
-              <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
-            </div>
-          </li>
-      </ul>
+<%# <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
-</div>
-
-
-<div class='fs-2 text-center mt-5'>
-  <div><%= @event.title %></div>
-  <img class="mt-3 mb-4 rounded-4" src="https://images.unsplash.com/photo-1545622783-b3e021430fee?q=80&w=868&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="event image">
-  <div>
-    <p class='fs-5'>From <%= @event.start_at.strftime('%m/%d/%Y')%> to <%= @event.end_at.strftime('%m/%d/%Y') %></p>
-    <p class='fs-5'><%= @event.location %></p>
-    <p class='fs-6'><%= @event.description %></p>
-    <a class="btn btn-primary" href="#">Book Now</a>
-  </div>
-</div>
+</div> %>
