started landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
   </div>
-  <div> <%= link_to "Write a story", "#", class: "btn btn-ghost" %>
   </div>
+<div style="text-align: right"> <%= link_to "Sign Up", "users/sign_up", class: "btn btn-ghost" %>
 </div>
+
+<h1>Welcome home.</h1>
+<p>BeWithUS. We're here to provide you with a loving family. Maybe you want to learn more about another culture or find a home away from home for the holidays. You can find caring families here to make beautiful memories with.</p>
