--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,44 +1,11 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <a class="navbar-brand" href=" ">
-      <i class="fa-solid fa-hand-sparkles"></i> BeWithUs
-    </a >
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <%# if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://t9.baidu.com/it/u=3375829578,1380084266&fm=193", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
-            </div>
-          </li>
-        <%# else %>
-          <!--li class="nav-item"-->
-            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
-        <%# end %>
-      </ul>
-    </div>
-  </div>
-</div>
-
 <h3>Welcome!Dear <%= @user.first_name%>!</h3>
+   <button type="button" class="btn btn-light">
+   <%= link_to "Create an event", new_event_path%>
+  </button>
+
 
 <div>
   <h2>All your events & related bookings as host:</h2>
-
   <div>
     <% @user.events.each do |event|%>
     <% bookings = []<< Booking.find_by(event: event) %>
@@ -49,31 +16,61 @@
              <small class="text-muted">description:   <%= event.description %></small>
              <span class="text-muted font-weight-normal">start at:   <%= event.start_at %></span>
              <span class="text-muted font-weight-normal">end at:   <%= event.end_at %></span>
-              <div>
-              <% if bookings !==nill %>
+            <div>
               <% bookings.each do |booking|%>
+              <% if booking !=nil %>
                   <div class="col-12 col-sm-6 mb-4 container" data-aos="zoom-in">
                      <div class="bg-white rounded shadow container text-center">
                        <div class="p-3 rounded-bottom d-flex flex-column">
-                         <strong>Applicant:   <%= booking.event.user.first_name %> </strong>
-                         <small class="text-muted">confirmed:   <%= booking.confirmed %></small>
+                         <strong>Applicant:</strong> <%= booking.user.first_name %> · <%= booking.user.last_name %>
+                          <strong>introduction:</strong>   <%= booking.user.introduction %>
+                          <strong>email:</strong>   <%= booking.user.email %>
+
+                          <%= link_to booking_path(booking),data: { turbo_method: :patch } do %>
+                            <button class="btn btn-light">
+                              <small class="text-muted"style="font-weight:bold">confirmed: <%= booking.confirmed %></small>
+                            </button>
+                          <% end %>
+
                         </div>
                      </div>
-                  </div>
-              </div>
-              <% end %>
-              <% else %>
-              <%= puts "sorry no booked" %>
-              <% end %>
+                   </div>
             </div>
+            <% if booking.confirmed%>
+          <span></span>
+          <% else %>
+            <button type="button" class="btn btn-light">
+               <%= link_to "delete", event_path(event),data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete '#{event.title}' from your event list?"}%>
+            </button>
+            <button type="button" class="btn btn-light">
+               <%= link_to "update", edit_event_path(event)%>
+            </button>
+            <% end %>
+                  <% else %>
+                        <small class="text-muted" style="font-style: oblique;font-weight:bold">sorry no booked</small>
+                  <% end %>
+                <% end %>
+            </div>
+          </div>
+      </div>
+  </div>
+  <% end %>
+</div>
+
+
+<div>
+  <h2>All your bookings as attendee:</h2>
+  <div>
+    <% @user.bookings.each do |booking|%>
+    <div class="col-12 col-sm-6 mb-4 container" data-aos="zoom-in">
+      <div class="bg-white rounded shadow container text-center">
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong>Title: <%= booking.event.title %> </strong>
+            <small class="text-muted">show details</small>
+            <small class="text-muted"style="font-weight:bold">confirmed:   <%= booking.confirmed %></small>
           </div>
       </div>
     </div>
   </div>
   <% end %>
-
-</div>
-
-<div>
-<h2>All your bookings as attendee:</h2>
 </div>
