--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
-  <div class="container">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1621112904887-419379ce6824?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+  <div class="container-seeallevents">
+    <a class="btn btn-flat" href="/events">See All Events</a>
   </div>
-  </div>
-<div style="text-align: right"> <%= link_to "Sign Up", "users/sign_up", class: "btn btn-ghost" %>
 </div>
-
+<div class="container-text">
 <h1>Welcome home.</h1>
 <p>BeWithUS. We're here to provide you with a loving family. Maybe you want to learn more about another culture or find a home away from home for the holidays. You can find caring families here to make beautiful memories with.</p>
+</div>
+<div style="text-align: center"> <%= link_to "Sign Up", "users/sign_up", class: "btn btn-ghost" %>
+</div>
