completed nav-bar functions when logged in vs. logged out; need to add me button to toggle once me route is fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,5 +7,5 @@
 <h1>Welcome home.</h1>
 <p>BeWithUS. We're here to provide you with a loving family. Maybe you want to learn more about another culture or find a home away from home for the holidays. You can find caring families here to make beautiful memories with.</p>
 </div>
-<div style="text-align: center"> <%= link_to "Sign Up", "users/sign_up", class: "btn btn-ghost" %>
+<div style="text-align: center"> <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-ghost" %>
 </div>
