--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "email" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -28,8 +28,7 @@
                 input_html: { autocomplete: "last_name" }%>
     <%= f.input :introduction,
                 required: true,
-                autofocus: true,
-                %>
+                autofocus: true %>
   </div>
 
   <div class="form-actions">
