--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%#= link_to "Me", me, class: "dropdown-item" %>
+              <%= link_to "Me", me_path, class: "dropdown-item" %>
               <%=link_to "Log Out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: "delete"} %>
             </div>
        </li>
