--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,19 +1,26 @@
 <h1 class="mt-5 mb-5 fs-2 fw-bold ms-4">Check out our events:</h1>
   <div class="container">
     <div class="row">
-      <div class="col-md-12  d-flex justify-conten-center">
+      <div class="col-md-12 row">
 
             <% @events.each do |event|%>
-              <div class="card mb-5 mx-3" style="width: 24rem;">
+              <div class="col-4 card mb-4 mx-3" style="width: 25rem; height:30rem">
+                  <div class="image mt-2">
+                    <% if event.images.attached? %>
+                      <%= cl_image_tag(event.images[0].key,height: 250, class:"object-fit-cover border rounded w-100") %>
+                    <% else %>
+                      <img src="https://images.unsplash.com/photo-1515288207449-100e125abccb?q=80&w=2569&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-placeholder" class="card-img-top mb-1 object-fit-cover border rounded w-100" style="height:250px" alt="event image">
+                    <% end %>
+                  </div>
                 <div class="card-body">
-                  <img src="https://images.unsplash.com/photo-1545622783-b3e021430fee?q=80&w=868&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="christmas" class="card-img-top mb-2" alt="event image">
-                  <div class="card-title fs-5 pb-2 fw-bold" style="height: 5rem"><%= event.title %></div>
-                    <div class="list-group-item">
-                      <p class="lh-1">From <%= event.start_at.strftime('%m/%d/%Y')%> to <%= event.end_at.strftime('%m/%d/%Y') %></p>
-                      <p class="lh-1"><%= event.location %></p>
-                    </div>
-                  <%= link_to 'See More', event_path(event), class: 'btn btn-primary' %>
+                  <div class="card-title fs-5 pb-1 fw-bold" style="height: 5rem"><%= event.title %></div>
+                  <div class="list-group-item">
+                    <p class="lh-1">From <%= event.start_at.strftime('%m/%d/%Y')%> to <%= event.end_at.strftime('%m/%d/%Y') %></p>
+                    <p class="lh-1"><%= event.location %></p>
+                  </div>
                 </div>
+                  <%= link_to 'See More', event_path(event), class: 'btn btn-primary position-absolute bottom-0 end-0 mx-3 my-2' %>
+
               </div>
             <% end %>
 
