--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,6 +9,7 @@
     opacity: 0.6;
     transition: opacity 0.3s ease;
     text-align: right;
+    margin-top: 50px
   }
   
   .btn-ghost:hover {
@@ -19,13 +20,14 @@
     color: rgb(17, 9, 9);
     padding: 8px 24px;
     border-radius: 4px;
-    background: #dfd2f3;
+    background: #f0ead6;
     transition: background 0.3s ease;
+    border: 2px solid #080808;
   }
   
   .btn-flat:hover {
     background: #c4a404;
-    color: white;
+    color: #f0ead6;
   }
   
   .btn-gradient {
@@ -66,10 +68,26 @@
   .container-text {
     width: 500px;   /* This sets the width */
     margin: 0 auto; /* This automatically sets left/right margins */
-    border: 5px solid #080808;
+    border: 2px solid #080808;
     border-radius: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
   }
 
+  .container-text:hover {
+    background: #c4a404;
+    color: #f0ead6;
+  }
   .container-seeallevents {
     text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 200px;
+    padding-right: 50px;
   }
+
+  .background-home {
+    background-color: #f0ead6;
+   }
