--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,37 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <i class="fa-solid fa-hand-sparkles"></i> BeWithUs
-    <% end %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Me", me_path, class: "dropdown-item" %>
-              <%=link_to "Log Out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: "delete"} %>
-            </div>
-       </li>
-      <% else %>
-          <li class="nav-item active">
-            <%=link_to "Sign Up", new_user_registration_path,  class:"nav-link" %>
-          </li>
-          <li class="nav-item active">
-            <%=link_to "Login", new_user_session_path,  class:"nav-link" %>
-          </li>
+<div style="background-color: #f0ead6">
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <div class="container-fluid">
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <i class="fa-solid fa-hand-sparkles"></i> BeWithUs
       <% end %>
-          
-      </ul>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <div class="dropdown-toggle p-2 rounded-circle d-flex align-items-center justify-content-center" style="width: 50px; height: 50px;" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa-sharp fa-solid fa-heart fa-xl" style="color: #000000;"></i>
+            </div>
+            
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Me", me_path, class: "dropdown-item" %>
+                <%=link_to "Log Out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: "delete"} %>
+              </div>
+        </li>
+        <% else %>
+            <li class="nav-item active">
+              <%=link_to "Sign Up", new_user_registration_path,  class:"nav-link" %>
+            </li>
+            <li class="nav-item active">
+              <%=link_to "Login", new_user_session_path,  class:"nav-link" %>
+            </li>
+        <% end %>
+            
+        </ul>
+      </div>
     </div>
   </div>
 </div>
