--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container w-50">
   <div class="mt-5">
-    <h2>Create an event here:</h2>
+    <h2>Edit your event here:</h2>
   </div>
   <div>
     <%= simple_form_for @event do |f| %>
@@ -8,7 +8,7 @@
       <%= f.input :start_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
       <%= f.input :end_at, as: :string, input_html: { data: { controller: "datepicker"}} %>
       <%= f.input :location %>
-      <%= f.input :description %>
+      <%= f.input :description, as: :text %>
       <%= f.input :images, as: :file, input_html: {multiple: true} %>
       <%= f.button :submit, class: "btn btn-primary" %>
     <% end %>
