--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="mt-5 mb-5 fs-2 fw-bold ms-4">Check out our events:</h1>
-  <div class="container">
+<h1 class="mt-5 mb-5 fs-2 fw-bold ms-5">Check out our events:</h1>
+  <div class="container mb-5">
     <div class="row">
       <div class="col-md-12 row">
 
