--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,9 @@
-<div class='fs-2 text-center mt-5 pb-5'>
-  <div class='fw-bold'><%= @event.title %>
+<div class='fs-2 text-center mt-5 pb-1'>
+  <div class='fw-bold'><%= @event.title %></div>
 </div>
 
 <%# Below is the carousel %>
-<div class="container">
+<div class="container-lg">
   <div id="carouselExample" class="carousel slide mt-3 mb-4">
     <ol class="carousel-inner">
       <% @event.images.each.with_index do |img, index| %>
@@ -20,17 +20,34 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-</div>
 <%# Above is the carousel %>
 
-
-  <div>
-    <p class='fs-5 lh-1'>From <%= @event.start_at.strftime('%m/%d/%Y')%> to <%= @event.end_at.strftime('%m/%d/%Y') %></p>
-    <p class='fs-5 lh-1'><%= @event.location %></p>
-    <p class='fs-6'><%= @event.description %></p>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#book_now_modal">Book Now</button>
+  <div class="text-center">
+    <div class="d-flex justify-content-center">
+      <div class="d-flex me-3">
+        <p class='fs-6 lh-1 mb-1 me-3'>From</p>
+        <p class='fs-5 fw-bold mb-1'><%= @event.start_at.strftime('%m/%d/%Y')%></p>
+      </div>
+      <div class="d-flex me-3">
+        <p class='fs-6 mb-1 me-3 lh-1'>To</p><p class='fs-5 fw-bold mb-3'><%= @event.end_at.strftime('%m/%d/%Y') %></p>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <p class='fs-5  lh-1 fw-bold'>@ <%= @event.location %></p>
+    </div>
+    <div class="mx-5">
+      <div class='fs-6 w-80 d-flex justify-content-between mb-4'><%= @event.description %></div>
+    </div>
+    <div class="conditional-buttons mb-5 pb-5">
+      <% if @event.user != current_user %>
+        <%= link_to "Book Now", event_bookings_path(@event), method: :post, class: "btn btn-primary", data: {"bs-toggle": "modal", "bs-target": "#book_now_modal"} %>
+      <% else %>
+        <%= link_to "Edit Event", edit_event_path(@event), class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
-</div>
+
+
 
 <div class="modal fade" id="book_now_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -45,11 +62,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <% if @event.user != current_user %>
-          <%= button_to "Book Now", event_bookings_path(@event), method: :post, class: "btn btn-primary" %>
-        <% else %>
-          <%= link_to "Book Now", edit_event_path(@event), class: "btn btn-primary" %>
-        <% end %>
+          <%= button_to "Confirm Booking", event_bookings_path(@event), method: :post, class: "btn btn-primary" %>
       </div>
     </div>
   </div>
