styling mostly done for devise pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,8 +21,6 @@
       </div>
     </div>
   </div>
-  <br>
-  <br>
-  <div style="text-align: center" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-flat" %>
+  <div style="text-align: center; margin: 50px;" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-flat" %>
   </div>
 </div>
