--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,20 +1,20 @@
 // Specific CSS for your home-page
 
-.btn-ghost {
-    color: #4A4A4A;
-    border: 1px solid #4A4A4A;
-    padding: 8px 24px;
-    border-radius: 50px;
-    font-weight: lighter;
-    opacity: 0.6;
-    transition: opacity 0.3s ease;
-    text-align: right;
-    margin-top: 50px
-  }
+// .btn-ghost {
+//     color: #4A4A4A;
+//     border: 1px solid #4A4A4A;
+//     padding: 8px 24px;
+//     border-radius: 50px;
+//     font-weight: lighter;
+//     opacity: 0.6;
+//     transition: opacity 0.3s ease;
+//     text-align: right;
+//     margin-top: 50px
+  // }
   
-  .btn-ghost:hover {
-    opacity: 1;
-  }
+  // .btn-ghost:hover {
+  //   opacity: 1;
+  // }
   
   .btn-flat {
     color: rgb(17, 9, 9);
