--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -15,18 +15,23 @@
 
   <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-6">
+        <div class="row d-flex align-items-center justify-content-center">
+        <div class="col-sm-12 col-lg-6">
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+              <div class="card-body">
+                  <%= image_tag "https://plus.unsplash.com/premium_photo-1681830059826-211adfd1b563?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI1fHxkaW5uZXJ8ZW58MHx8MHx8fDA%3D", class: "card-img-top" %>
+                  <h1 style="text-align: center; padding-right: 15px; padding-left: 15px; padding-top: 30px">
+                      You're on your way to meeting a new family.
+                  </h1>
+              </div>
+          </div>
+     </div>
+          <div class="col-sm-12 col-lg-6 p-5">
                <div style= "padding-top: 30px; padding-bottom: 30px"> 
                     <%= yield %>
                 </div>
-            </div>
-            <div  class="col-sm-12 col-lg-6">
-                <%= image_tag "https://plus.unsplash.com/premium_photo-1681830059826-211adfd1b563?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI1fHxkaW5uZXJ8ZW58MHx8MHx8fDA%3D" %>
-                <h1 style= "text-align: center; padding-right: 15px; padding-left: 15px; padding-top: 30px">
-                    You're on your way to meeting a new family.
-                </h1>
-            </div>
+          </div>
+            
         </div>
     </div>
     
