--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <div class= "background-home">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1621112904887-419379ce6824?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+    <div>
+      <h1 style="padding-left: 100px; font-size: 65px;">Find your family.</h1>
+    </div> 
     <div class="container-seeallevents">
       <a class="btn btn-flat" href="/events">See All Events</a>
     </div>
@@ -21,6 +24,11 @@
       </div>
     </div>
   </div>
-  <div style="text-align: center; margin: 50px;" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-flat" %>
-  </div>
+  <% if user_signed_in? %>
+  <% else %>
+    <div style= "padding: 50px;">
+      <div style="text-align: center;" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-flat" %>
+      </div>
+    </div>
+  <% end %>
 </div>
