final group touches

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,13 @@
 @import "components/index";
 @import "pages/index";
 @import "components/button";
+
+
+
+body {
+background-color: #f0ead6;
+}
+
+.btn-primary {
+    background-color: #c4a404;
+}
