--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h1 style="padding-left: 100px; font-size: 65px;">Find your family.</h1>
     </div> 
     <div class="container-seeallevents">
-      <a class="btn btn-flat" href="/events">See All Events</a>
+      <a class="btn btn-primary" href="/events">See All Events</a>
     </div>
   </div>
   <div class="container-text">
@@ -27,7 +27,7 @@
   <% if user_signed_in? %>
   <% else %>
     <div style= "padding: 50px;">
-      <div style="text-align: center;" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-flat" %>
+      <div style="text-align: center;" > <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
       </div>
     </div>
   <% end %>
