--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div style="background-color: #f0ead6">
+<div style="background-color: #f0ead6; border-bottom: 2px solid;">
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
       <%= link_to root_path, class: "navbar-brand" do %>
